--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     <div class="preloader">
       <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     </div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
